# lime

./: CMakeLists.txt
app/: CMakeLists.txt
app/include/: LimeS.hpp
app/res/: LimeS.qrc
app/src/: LimeS.cpp  main.cpp
app/ui/: LimeS.ui
lib/: CMakeLists.txt  FindLime.cmake  LimeConfig.cmake
lib/include/lime/: Algorithm.hpp  ColorimetricHSIAlgorithm1.hpp  ColorimetricHSVAlgorithm1.hpp  ColorimetricYCbCrAlgorithm1.hpp  Segmentation.hpp  util.hpp
lib/src/: Segmentation.cpp
lib/test/: test.cpp
